--- a/app/src/main/res/layout/activity_web_connect.xml
+++ b/app/src/main/res/layout/activity_web_connect.xml
@@ -45,6 +45,7 @@
         android:text="Name"
         android:layout_toLeftOf="@+id/btn_go"
         android:layout_toStartOf="@+id/btn_go"
-        android:hint="@string/type_a_url"/>
+        android:hint="@string/type_a_url"
+        android:onClick="connect"/>
 
 </RelativeLayout>
