--- a/app/src/main/res/layout/activity_web_connect.xml
+++ b/app/src/main/res/layout/activity_web_connect.xml
@@ -41,11 +41,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textUri"
         android:text="Name"
         android:layout_toLeftOf="@+id/btn_go"
         android:layout_toStartOf="@+id/btn_go"
         android:hint="@string/type_a_url"
-        android:onClick="connect"/>
+        android:onClick="connect" />
 
 </RelativeLayout>
