--- a/app/src/main/res/layout/activity_web_connect.xml
+++ b/app/src/main/res/layout/activity_web_connect.xml
@@ -30,7 +30,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:text="@string/go" />
+        android:text="@string/go"
+        android:onClick="connect"/>
 
     <EditText
         android:id="@+id/url"
@@ -41,7 +42,7 @@
         android:layout_alignParentStart="true"
         android:ems="10"
         android:inputType="textUri"
-        android:text="Name"
+        android:text=""
         android:layout_toLeftOf="@+id/btn_go"
         android:layout_toStartOf="@+id/btn_go"
         android:hint="@string/type_a_url"
